@@ -4,6 +4,7 @@ align
 arg
 argconfig
 autoptr
+base64streambufbase
 binarysearch
 binops
 cgi
@@ -25,6 +26,7 @@ gs
 hash 
 hostent
 hostname
+ibase64streambuf
 ifdstream 
 ifdstreambuf
 ifilterstreambuf
@@ -54,10 +56,10 @@ ofoldstreambuf
 ohexstreambuf
 onekey
 pattern
-pipe
-primefactors
 pf_iterator
 pf_iteratorstream
+pipe
+primefactors
 process
 ptriter
 randbuffer
