@@ -1,4 +1,4 @@
-#include "isymcryptstreambuf"
+#include "base64streambufbase"
 
 using namespace std;
 using namespace FBB;
