@@ -1,0 +1,6 @@
+#include "base64streambufbase.ih"
+
+Base64StreambufBase::Base64StreambufBase(std::istream &in)
+:
+    d_in(in)
+{}
