@@ -1,0 +1,7 @@
+#include "base64streambufbase.ih"
+
+string const Base64StreambufBase::s_tabStr = 
+                    "ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+                    "abcdefghijklmnopqrstuvwxyz"
+                    "0123456789+/";
+
