@@ -1,0 +1,5 @@
+#include "base64streambufbase.ih"
+
+Base64StreambufBase::
+{
+}
