@@ -1,0 +1,16 @@
+#ifndef INCLUDED_BOBCAT_FBB_
+#define INCLUDED_BOBCAT_FBB_
+
+namespace FBB
+{
+
+enum CryptType
+{
+    DECRYPT,
+    ENCRYPT
+};
+
+
+} // FBB        
+
+#endif
