@@ -1,0 +1,5 @@
+#include "fbb.ih"
+
+fbb::
+{
+}
