@@ -1,0 +1,5 @@
+#include "ibase64streambuf.ih"
+
+IBase64Streambuf::
+{
+}
