@@ -1,4 +1,4 @@
-#include "isymcryptstreambuf"
+#include "ibase64streambuf"
 
 using namespace std;
 using namespace FBB;
