@@ -3,9 +3,15 @@ bobcat (3.15.00)
   * Added class IFilterStreambuf, implementing filtering like, e.g., openSSL
     BIOs.
 
-  * Added class ISymCryptStreambuf and its (internal use only) base class 
-    SymCryptStreambufBase, implementing SSL-provided symmetric en- and
+  * Added class ISymCryptStreambuf and its base class 
+    SymCryptStreambufBase, implementing SSL-provided symmetric encrption and
     decryption using the IFilterStreambuf design pattern.
+
+  * Added class IBase64Streambuf and its base class Base64StreambufBase,
+    implementing base64 encoding and decoding, using the IFilterStreambuf
+    design pattern.
+
+
 
 
 bobcat (3.14.00)
